--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "irc": "^0.3.9"
+    "irc": "^0.3.9",
+    "underscore": "^1.8.2"
   }
 }
